force-app/main/default/objects/Message_Template__c/Message_Template__c.object-meta.xml
<CustomObject>
    <label>Message Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>