force-app/main/default/objects/Message_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this template is currently active</description>
    <inlineHelpText>Check this box if this template should be active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>