force-app/main/default/objects/Message_Template__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Distributor associated with this template</description>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Message Templates</relationshipLabel>
    <relationshipName>Message_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>