force-app/main/default/objects/Message_Template__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <description>Type of switching process this template is for</description>
    <inlineHelpText>Select the type of switching process this template is for</inlineHelpText>
    <label>Process Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTA_GAS</fullName>
                <label>Alta de Gas</label>
            </value>
            <value>
                <fullName>BAJA_GAS</fullName>
                <label>Baja de Gas</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_GAS</fullName>
                <label>Cambio de Comercializadora</label>
            </value>
            <value>
                <fullName>CAMBIO_TITULAR_GAS</fullName>
                <label>Cambio de Titular</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_TITULAR_GAS</fullName>
                <label>Cambio de Comercializadora y Titular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>