force-app/main/default/objects/Message_Template__c/fields/Template_Content__c.field-meta.xml
<CustomField>
    <fullName>Template_Content__c</fullName>
    <description>XML template content with placeholders for dynamic values</description>
    <inlineHelpText>Enter the XML template content with placeholders for dynamic values</inlineHelpText>
    <label>Template Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>